[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player/Weapon/Shotgun/shotgun_bullet.png" type="Texture" id=1]
[ext_resource path="res://Player/Weapon/Shotgun/ShotgunBullet.gd" type="Script" id=2]

[node name="ShotgunBullet" type="Area2D"]
position = Vector2( -0.25, 0.25 )
collision_layer = 4
collision_mask = 18
script = ExtResource( 2 )

[node name="LifeTime" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -19, 0 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -15.75, -64.25, 0.25, -64.25, 24.25, -32.25, 24.25, 31.75, 0.25, 63.75, -15.75, 63.75, -31.75, 63.75, -7.75, 23.75, -7.75, -16.25, -31.75, -56.25 )
[connection signal="body_entered" from="." to="." method="_on_ShotgunBullet_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ShotgunBullet_body_exited"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
